--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.11.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-androw": "^0.0.34",
+    "react-native-animatable": "^1.3.3",
+    "react-native-dynamic-vector-icons": "^1.2.0",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-imaged-card-view": "^0.0.11",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-star-review": "^0.0.3",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation-web": "^0.0.0",
+    "react-number-format": "^4.9.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
