--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^14.11.0",
+    "@react-native-firebase/auth": "^14.11.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "aws-amplify": "^4.3.24",
+    "aws-amplify-react-native": "^6.0.4",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^9.8.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.32.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-androw": "^0.0.34",
     "react-native-animatable": "^1.3.3",
